This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.7.0
=============
- Essential modification: API functions such as kriging, xvalid, ... are now using KrigOpt 
  argument to carry all the options used while kriging (calcul, ndisc for block, matLC, DGM, ...)

- evalCov is now a concrete method of ACov and it calls _eval which is pure virtual and has to be implemented in new covariance classes.
- eval is renamed evalCov in ACov (the version which takes const SpacePoint& in arguments) 
- evalCov is renamed evalCorFunc in CovFunc class
- evalCov is renamed computeCov in PrecisionOp class
- evalCov is renamed evalCovFromIncr in Model
- in MeshETurbo, add a method to retreive mesh index from the coordinates of a Target Point
- Parameter 'nxmax' for dimensioning automatic meshing is now parametrized in SPDEParam()
- Create a new method to generate a Model with random values
- Major renaming of variables, such as getxxxNumber() into getNxxx().
  Some examples:
  getVariableNumber() or getNVariables() becomes getNVar()
  getSampleNumber() becomes getNSample()
  getActiveSampleNumber() becomes getNSampleActive()
  getNumberActiveAndDefined() becomes getNSampleActiveAndDefined()
  getLocatorNumber() or getLocNumber() becomes getNLoc()
  getCovaNumber() becomes getNCov()
  getDriftNumber() becomes getNDrift()
  getIntervalNumber() becomes getNInterval()

  isVariableNumberComparedTo() becomes isNVarComparedTo()

Release 1.6.0
=============
- in db::getAllCoordinatesMap, adding possibility to select within a Box.
- new method in DbLine: createVerticalFromGrid()
- Migrate: in Grid to Grid, perform interpolation if flag_inter is True
- Add version in functions loadDoc and loadData (Python and R)
- Fix loadData in R when trying to download the data file from the web (require 'lares' package)